# RPICAPP

./: .gitignore  DEVELOPMENT.md  FLUTTER_FIXES.md  IMPLEMENTATION_COMPLETE.md  MULTIDEVICE_SUMMARY.md  README.md
.claude/: settings.local.json
launcher/: REAL_DEVICE_TEST_GUIDE.md  pyproject.toml
launcher/src/ttalkak_launcher/: __init__.py  cli.py  errors.py  models.py  multiflash.py  pipeline.py  qa.py  registration.py  settings.py  state_machine.py  windows_tools.py
launcher/src/ttalkak_launcher/web/: api.py  app.py  device_discovery.py  qr_generator.py
launcher/src/ttalkak_launcher/web/static/: app.js  index.html  style.css
pi/: SETUP.md
rasplab/: .env.example  MULTIDEVICE_FLUTTER_GUIDE.md  README.md  pubspec.yaml
rasplab/android/: build.gradle.kts  gradle.properties
rasplab/android/app/: build.gradle.kts
rasplab/ios/Runner/: Info.plist
rasplab/ios/Runner.xcodeproj/: project.pbxproj
rasplab/lib/: main.dart
rasplab/lib/config/: constants.dart  theme.dart
rasplab/lib/models/: chat_session.dart  code_block.dart  device.dart  message.dart
rasplab/lib/providers/: ble_provider.dart  chat_provider.dart  connection_provider.dart  device_provider.dart  execution_provider.dart  session_provider.dart
rasplab/lib/screens/: chat_screen.dart  connect_screen.dart  home_screen.dart
rasplab/lib/services/: ble_service.dart  claude_service.dart  db_service.dart  qr_service.dart
rasplab/lib/widgets/: chat_bubble.dart  code_block_widget.dart  connection_indicator.dart  device_list_tile.dart  device_selector.dart  (+2 more)
rasplab/test/: widget_test.dart
(+3 files in other folders)
