[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttalkak-launcher"
version = "0.1.0"
description = "Windows launcher for Raspberry Pi factory provisioning"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "qrcode[pil]>=8.0",
    "pillow>=11.0",
]

[project.scripts]
ttl = "ttalkak_launcher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
